[tool.poetry]
name = "00"
version = "0.1.0"
description = ""
authors = ["Coldeeshiashi <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytube = "^11.0.1"
PyDrive = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
